--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- 고급웹프로그래밍_3_최원빈_60203042 -->
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
@@ -48,6 +49,16 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
+            <li class="nav-item me-2">
+              <a class="btn btn-outline-secondary btn-sm" href="/users">
+                회원 목록 보기
+              </a>
+            </li>
+            <li class="nav-item me-2">
+              <a class="btn btn-outline-success btn-sm" href="/posts">
+                등록한 상품 보기
+              </a>
+            </li>
             <li class="nav-item">
               <button
                 class="btn btn-outline-primary btn-sm me-2"
@@ -149,7 +160,9 @@
                     </span>
                   </div>
                   <div class="mb-2">
-                    <strong class="text-primary fs-4">{{price}}원</strong>
+                    <strong class="text-primary fs-4"
+                      >{{formatPrice price}}원</strong
+                    >
                   </div>
                   <div class="small text-muted mb-2">
                     <div>최소 인원: {{minParticipants}}명</div>
