<Feat> participation Append with MockUI

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -58,6 +58,11 @@
                 등록한 상품 보기
               </a>
             </li>
+            <li class="nav-item me-2">
+              <a class="btn btn-outline-info btn-sm" href="/chat">
+                💬 실시간 채팅
+              </a>
+            </li>
             <li class="nav-item">
               <button
                 class="btn btn-outline-primary btn-sm me-2"
