--- a/src/views/index.html
+++ b/src/views/index.html
@@ -187,6 +187,15 @@
                       >
                         참여하기
                       </button>
+                      <div class="d-none joined-status-container" data-post-id="{{id}}">
+                        <div class="text-center mb-2 text-success fw-bold small">참여중...</div>
+                        <button
+                          class="btn btn-sm btn-warning w-100 cancel-join-post-btn"
+                          data-post-id="{{id}}"
+                        >
+                          참여취소
+                        </button>
+                      </div>
                     {{/eq}}
                   </div>
                 </div>
