<Feat> 채팅방 관련 이슈 해결

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -197,6 +197,12 @@
                         </button>
                       </div>
                     {{/eq}}
+                    <button
+                      class="btn btn-sm btn-outline-primary w-100 mt-2 d-none manage-post-btn"
+                      data-post-id="{{id}}"
+                    >
+                      관리하기
+                    </button>
                   </div>
                 </div>
               </div>
